# chess_multiplayer

./: CMakeLists.txt  main.cpp
include/: board_view.h  button.h  chess_gui.h  constants.h  utils.h
lib/: FenParser.h  GameState.h  Move.h
src/: board_view.cpp  button.cpp  chess_gui.cpp  constants.cpp  utils.cpp
ui/: chessgui.ui
